add pylint, autopep8

--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,9 @@ name = "pypi"
 django = "*"
 
 [dev-packages]
+pylint = "*"
+pylint-django = "*"
+autopep8 = "*"
 
 [requires]
 python_version = "3.9"
