--- a/frontend-meals/package.json
+++ b/frontend-meals/package.json
@@ -26,7 +26,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "proxy": "http://localhost:8000" 
+    "proxy": "http://localhost:8000/" 
   },
   "eslintConfig": {
     "extends": [
