--- a/frontend-meals/package.json
+++ b/frontend-meals/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "firebase": "^8.3.0",
+    "formik": "^2.2.9",
     "js-cookie": "^2.2.1",
     "moment": "^2.29.1",
     "momentjs": "^2.0.0",
@@ -26,7 +27,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "proxy": "http://localhost:8000/" 
+    "proxy": "http://localhost:8000/"
   },
   "eslintConfig": {
     "extends": [
