--- a/frontend-meals/package.json
+++ b/frontend-meals/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.29.1",
     "momentjs": "^2.0.0",
     "node-sass": "^5.0.0",
+    "nvm": "^0.0.4",
     "react": "^17.0.1",
     "react-calendar": "^3.3.1",
     "react-dom": "^17.0.1",
