--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,8 @@ Django==3.1.7
 django-cors-headers==3.7.0
 djangorestframework==3.12.2
 drf-nested-routers==0.93.3
-filelock==3.0.12
+filelock==3.0.
+gunicorn>=20.1.0
 ipykernel==5.4.2
 ipython==7.19.0
 ipython-genutils==0.2.0
