--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ django = "*"
 djangorestframework = "*"
 drf-nested-routers = "*"
 django-cors-headers = "*"
+gunicorn = "*"
 
 [dev-packages]
 pylint = "*"
