--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ Django==3.1.7
 django-cors-headers==3.7.0
 djangorestframework==3.12.2
 drf-nested-routers==0.93.3
-filelock==3.0.
+filelock==3.0.0
 gunicorn==20.1.0
 ipykernel==5.4.2
 ipython==7.19.0
@@ -40,6 +40,7 @@ sqlparse==0.4.1
 toml==0.10.2
 tornado==6.1
 traitlets==5.0.5
+tzdata==2022.4
 virtualenv==20.3.0
 virtualenv-clone==0.5.4
 wcwidth==0.2.5
