--- a/frontend_meals/package.json
+++ b/frontend_meals/package.json
@@ -29,8 +29,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "proxy": "http://localhost:8000/"
-    
+    "proxy": "http://localhost:8000/",
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": [
