--- a/package.json
+++ b/package.json
@@ -9,5 +9,9 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "heroku-postbuild": "npm run build"
+  },
+  "engines":{
+    "node": "<= 16.x",
+    "npm":"<= 8.x"
   }
 }
