--- a/frontend_meals/package.json
+++ b/frontend_meals/package.json
@@ -18,6 +18,7 @@
     "react": "^17.0.1",
     "react-calendar": "^3.3.1",
     "react-dom": "^17.0.1",
+    "react-loader-spinner": "^5.3.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
