--- a/package.json
+++ b/package.json
@@ -1,6 +1,27 @@
 {
   "dependencies": {
-    "serve": "^14.0.1"
+    "serve": "^14.0.1",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.4",
+    "firebase": "^8.3.0",
+    "formik": "^2.2.9",
+    "js-cookie": "^2.2.1",
+    "json-server": "^0.17.0",
+    "moment": "^2.29.1",
+    "momentjs": "^2.0.0",
+    "node-sass": "^5.0.0",
+    "nvm": "^0.0.4",
+    "react": "^17.0.1",
+    "react-calendar": "^3.3.1",
+    "react-dom": "^17.0.1",
+    "react-loader-spinner": "^5.3.4",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "sass": "^1.32.8",
+    "web-vitals": "^1.1.1"
   },
   "scripts": {
     "dev": "react-scripts start",
@@ -10,8 +31,8 @@
     "eject": "react-scripts eject",
     "heroku-postbuild": "npm run build"
   },
-  "engines":{
+  "engines": {
     "node": "<= 16.x",
-    "npm":"<= 8.x"
+    "npm": "<= 8.x"
   }
 }
