--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  
   "scripts": {
     "dev": "react-scripts start",
     "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "npm run build",
+    "postinstall": "npm run build"
   },
   "engines": {
     "node": "<= 16.x",
